--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "1.16.1",
     "express": "4.14.1",
+    "multer": "1.3.0",
     "tfs_api_wrapper": "1.0.0"
   }
 }
